tests/specs/type_literal_mapped_type.txt
# mod.ts
export type T<Type> = { readonly [P in keyof Type as NewType]: Type[P]; }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type T<Type> = { readonly [P in keyof Type as NewType]: Type[P]; }
  | ^

# output.txt
Defined in file:///mod.ts:0:1

type T<Type> = readonly [P in keyof Type as NewType]: Type[P]


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "T",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "typeAlias",
          "def": {
            "tsType": {
              "repr": "",
              "kind": "mapped",
              "value": {
                "readonly": true,
                "typeParam": {
                  "name": "P",
                  "constraint": {
                    "repr": "",
                    "kind": "typeOperator",
                    "value": {
                      "operator": "keyof",
                      "tsType": {
                        "repr": "Type",
                        "kind": "typeRef",
                        "value": {
                          "typeParams": null,
                          "typeName": "Type"
                        }
                      }
                    }
                  }
                },
                "nameType": {
                  "repr": "NewType",
                  "kind": "typeRef",
                  "value": {
                    "typeParams": null,
                    "typeName": "NewType"
                  }
                },
                "tsType": {
                  "repr": "",
                  "kind": "indexedAccess",
                  "value": {
                    "readonly": false,
                    "objType": {
                      "repr": "Type",
                      "kind": "typeRef",
                      "value": {
                        "typeParams": null,
                        "typeName": "Type"
                      }
                    },
                    "indexType": {
                      "repr": "P",
                      "kind": "typeRef",
                      "value": {
                        "typeParams": null,
                        "typeName": "P"
                      }
                    }
                  }
                }
              }
            },
            "typeParams": [
              {
                "name": "Type"
              }
            ]
          }
        }
      ]
    }
  ]
}
